[package]
name = "v3scan"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
web3 = { version = "0.19.0", features = ["http-rustls-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
log4rs = "1.3.0"
ctrlc = "3.4.5"
dotenv = "0.15.0"
clap = { version = "4.5.23", features = ["derive", "env"] }
lazy_static = "1.5.0"
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.14", default-features = false, features = [
    "json",
    "rustls-tls",
] }
async-trait = "0.1.88"
jsonrpc-core = "18.0.0"
actix-cors = "0.7.0"
actix-web = "4.9.0"
anyhow = "1.0.98"
libc = "0.2.172"
ethers-core = "2.0.14"
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite"] }
